--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,9 +14,16 @@ requires-python = ">=3.10"
 linting = [
     "mypy>=1.8.0",
     "ruff>=0.1.9",
+    "types-beautifulsoup4>=4.12.0.7",
+    "types-requests>=2.31.0.10",
 ]
 testing = [
     "pytest>=7.4.3",
+]
+dev = [
+    "beautifulsoup4>=4.12.2",
+    "requests>=2.31.0",
+    "unmarkd>=1.1.1",
 ]
 
 [tool.mypy]
